# tomo_cmake

./: .gitignore  CMakeLists.txt
new_build/: CMakeCache.txt
projector_lib/: CMakeLists.txt
projector_lib/include/projector_lib/: Geometries.h  Geometry.h  Line.h  MyImg.h  Point.h  Projector.hpp  SumAlgo.h  SumAlgorithm.h
projector_lib/src/: Line.cpp  MyImg.cpp  Projector.cpp
projector_py/: CMakeLists.txt  projector_py.cpp  projector_py.h  projector_py.py
projector_test/: CMakeLists.txt  projector_test.cpp
projector_test/assets/: create_filtered_sinograms.py  create_phantoms.py  create_sinograms.py  for_task_1.py  for_task_3D.py  phantom_3D.txt  sinogram_3D.txt  sinogram_model_fan_area.txt  sinogram_model_fan_line.txt  sinogram_model_par_area.txt  sinogram_model_par_line.txt
projector_test/assets/filtered_sinograms/: sinogram_2D_phantom_fan_area.txt  sinogram_2D_phantom_fan_line.txt  sinogram_2D_phantom_par_area.txt  sinogram_2D_phantom_par_line.txt
projector_test/assets/phantoms/: model_2D.txt  model_3D.txt  phantom_2D.txt  phantom_3D.txt
projector_test/assets/target_sinograms/: sinogram_2D_model_fan_area.txt  sinogram_2D_model_fan_line.txt  sinogram_2D_model_par_area.txt  sinogram_2D_model_par_line.txt  sinogram_2D_phantom_fan_area.txt  sinogram_2D_phantom_fan_line.txt  sinogram_2D_phantom_par_area.txt  sinogram_2D_phantom_par_line.txt  sinogram_3D_model.txt  sinogram_3D_phantom.txt
projector_test/out_images/: delta.txt  symetry_delta.txt
